@@ -12,6 +12,7 @@ Thu Apr 29 16:20:00 2010 Damien Churchill <damoxc@gmail.com>
 		+ bugfix:  fix raising exceptions from convert_python_value()
 		+ bugfix:  fix binding parameters of int type when larger than
 		           2^31 - 1 (raise exception).
+		+ bugfix:  use sprintf rather than python strings in the msg_handler
 	* pymssql:
 		+ feature: add initial support for callproc()
 		+ feature: add support for setting the application name
